# emblematic

./: .editorconfig  .gitignore  .readthedocs.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: quality.yml  release.yml  test.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  installation.rst  prerequisites.rst  usage.rst
docs/source/_static/: .gitignore
emblematic/: __init__.py  __main__.py  compose.py  files.py  fontawesome.py
